--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,27 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.micropostPriority1 {
+  background-color:#FFFF80 !important;
+}
+
+.micropostPriority2 {
+  background-color:#FFFF00 !important;
+}
+
+.micropostPriority3 {
+  background-color:#FF8000 !important;
+}
+
+.micropostTitle {
+  font-size:1.5em;
+}
+
+.micropostContent {
+  font-size:1.2em;
+}
+
+.micropostDate {
+  font-size:0.8em;
+}
