--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@ a {
   box-sizing: border-box;
 }
 
+.navigationBar {
+  font-size: 2.5em;
+}
+
 .micropostPriority1 {
   background-color:#FFFF80 !important;
 }
